.k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend
  namespace: production
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    kubernetes.io/ingress.class: "gce"
spec:
  tls:
  - hosts:
    - frontend.prpo.timhrovat.com
    secretName: frontend-tls
  rules:
  - host: frontend.prpo.timhrovat.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
